# Jon---AI

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  MEMORY.md  README.en.md  README.md  autostart-jon.bat  build-installer.bat  installer-bauen.bat  jon.bat  netlify-hochladen.bat  netlify.toml  pi-installieren.sh  pi-update.sh  start-jon.bat  start-server.sh  start.ps1
backend/: _smoke_tmp.py  jon-backend.spec  pyproject.toml  requirements-pi.txt  requirements.txt  run_backend.py
backend/app/: cli.py  main.py  schemas.py
backend/app/api/: p2p_routes.py  routes.py  system_routes.py
backend/app/core/: config.py  keys.py
backend/app/db/: database.py  models.py
backend/app/providers/: anthropic_provider.py  base.py  gemini_provider.py  openai_compatible.py  registry.py
backend/app/services/: account_service.py  action_log_service.py  amazon_music_service.py  approval_service.py  appusage_service.py  attachment_service.py  autofile_service.py  automation_service.py  backup_service.py  briefing_service.py  browser_service.py  calendar_service.py  capsule_service.py  chat_service.py  cleanup_service.py  clipboard_service.py  coding.py  cowork_service.py  crypto_service.py  downloader_service.py  dream_service.py  flashcards_service.py  focus_service.py  game_service.py  homeassistant_service.py  humanize_service.py  journal_service.py  (+43 more)
backend/tests/: conftest.py  test_api.py  test_chat_features.py  test_companion.py  test_downloader.py  test_extras.py  test_game.py  test_netlify.py  test_private_browser.py  test_provider_auswahl.py  test_telegram_groups.py
(+109 files in other folders)
